package com.yushixin.create.builder;

/**
 * 产品(需要建造的对象)
 */
public class Product {
}
